Add zero encryption of event and censoring for all time points from 0 to timeLimit. Tested postCohort.
