# survival/server/subGroupExplore.go
@@ -13,7 +13,7 @@ func SubGroupExplore(queryName string, subGroupIndex int, panelsItemKeys [][]str
 	if err != nil {
 		return 0, nil, err
 	}
-	patientIDs, _, err := i2b2.GetPatientSet(patientSetID)
+	patientIDs, _, err := i2b2.NoAddedGetPatientSet(patientSetID)
 	if err != nil {
 		return 0, nil, err
 	}
