# survival/server/survival_query.go
@@ -9,6 +9,7 @@ import (
 	querytools "github.com/ldsec/medco-connector/queryTools"
 	"github.com/ldsec/medco-connector/wrappers/unlynx"
 
+	"github.com/ldsec/medco-connector/restapi/models"
 	"github.com/ldsec/medco-connector/restapi/server/operations/survival_analysis"
 )
 
@@ -47,7 +48,7 @@ func NewQuery(UserId,
 	EndConcept string,
 	EndColumn string,
 	EndModifier string) *Query {
-	return &Query{
+	res := &Query{
 		UserPublicKey:       UserPublicKey,
 		UserId:              UserId,
 		QueryName:           QueryName,
@@ -60,7 +61,13 @@ func NewQuery(UserId,
 		StartModifier:       StartModifier,
 		EndConcept:          EndConcept,
 		EndColumn:           EndColumn,
-		EndModifier:         EndModifier}
+		EndModifier:         EndModifier,
+		Result: &struct {
+			Timers    map[string]time.Duration
+			EncEvents EventGroups
+		}{}}
+	res.Result.Timers = make(map[string]time.Duration)
+	return res
 }
 
 func (q *Query) Execute() error {
@@ -74,66 +81,12 @@ func (q *Query) Execute() error {
 	timer := time.Now()
 	cohort, err := GetPatientList(querytools.ConnectorDB, int64(q.SetID), q.UserId)
 	q.addTimers("medco-connector-get-patient-list", timer)
+	logrus.Debug("got patients")
 
 	if err != nil {
 		logrus.Error("error while getting patient list")
 		return err
 	}
-	timer = time.Now()
-	if q.SubGroupDefinitions == nil || len(q.SubGroupDefinitions) == 0 {
-		eventGroups = append(eventGroups, &EventGroup{GroupID: q.QueryName + "_FULL_COHORT"})
-		panels := [][]string{{q.StartConcept}}
-		logrus.Debug(q.StartConcept, panels[0][0])
-		not := []bool{false}
-		initCount, patientList, err := SubGroupExplore(q.QueryName, 0, panels, not)
-		if err != nil {
-			return err
-		}
-		initialCounts = append(initialCounts, initCount)
-		initialCountEncrypt, err := unlynx.EncryptWithCothorityKey(initCount)
-		if err != nil {
-			return err
-		}
-		logrus.Debug("initialcount ", initialCountEncrypt)
-		eventGroups[0].EncInitialCount = initialCountEncrypt
-		patientLists = append(patientLists, Intersect(cohort, patientList))
-	} else {
-		for i, definition := range q.SubGroupDefinitions {
-			eventGroups = append(eventGroups, &EventGroup{GroupID: q.QueryName + fmt.Sprintf("_GROUP_%d", i)})
-			panels := make([][]string, 0)
-			not := make([]bool, 0)
-			panels = append(panels, []string{q.StartConcept})
-			not = append(not, false)
-			for _, panel := range definition.Panels {
-				terms := make([]string, 0)
-
-				negation := *panel.Not
-
-				for _, term := range panel.Items {
-					terms = append(terms, *term.QueryTerm)
-				}
-
-				panels = append(panels, terms)
-				not = append(not, negation)
-			}
-
-			initialCount, patientList, err := SubGroupExplore(q.QueryName, i, panels, not)
-			patientLists = append(patientLists, Intersect(cohort, patientList))
-			initialCounts = append(initialCounts, initialCount)
-			logrus.Debug("Initial Counts", initialCounts)
-			if err != nil {
-				return err
-			}
-
-			initialCountEncrypt, err := unlynx.EncryptWithCothorityKey(initialCount)
-			if err != nil {
-				return err
-			}
-			logrus.Debug("initialcount ", initialCountEncrypt)
-			eventGroups[i].EncInitialCount = initialCountEncrypt
-		}
-	}
-	q.addTimers("medco-connector-i2b2-explore-queries", timer)
 
 	//get concept and modifier codes from the ontology
 	err = DirectI2B2.Ping()
@@ -147,6 +100,98 @@ func (q *Query) Execute() error {
 		logrus.Error("Error while retrieving concept code, ", err)
 		return err
 	}
+
+	definitions := q.SubGroupDefinitions
+	if q.SubGroupDefinitions == nil || len(q.SubGroupDefinitions) == 0 {
+		newItems := make([]*models.PanelItemsItems0, 1)
+		encrypted := new(bool)
+		not := new(bool)
+		*encrypted = false
+		*not = false
+		term := new(string)
+		*term = q.StartConcept
+		newItems[0] = &models.PanelItemsItems0{
+			Encrypted: encrypted,
+			Operator:  "equals",
+			QueryTerm: term,
+		}
+		newPanels := make([]*models.Panel, 1)
+		newPanels[0] = &models.Panel{
+			Items: newItems,
+			Not:   not,
+		}
+
+		definitions = []*survival_analysis.SubGroupDefinitionsItems0{
+			{
+				CohortName: "FULL_COHORT",
+				Panels:     newPanels,
+			},
+		}
+
+	}
+	/*
+		if q.SubGroupDefinitions == nil || len(q.SubGroupDefinitions) == 0 {
+			eventGroups = append(eventGroups, &EventGroup{GroupID: q.QueryName + "_FULL_COHORT"})
+			panels := [][]string{{q.StartConcept}}
+			logrus.Debug(q.StartConcept, panels[0][0])
+			not := []bool{false}
+			timer = time.Now()
+			initCount, patientList, err := SubGroupExplore(q.QueryName, 0, panels, not)
+			q.addTimers("medco-connector-i2b2-query-group0", timer)
+			if err != nil {
+				return err
+			}
+			initialCounts = append(initialCounts, initCount)
+			timer = time.Now()
+			initialCountEncrypt, err := unlynx.EncryptWithCothorityKey(initCount)
+			if err != nil {
+				return err
+			}
+			q.addTimers("medco-connector-encrypt-init-count-group0", timer)
+			logrus.Debug("initialcount ", initialCountEncrypt)
+			eventGroups[0].EncInitialCount = initialCountEncrypt
+			patientLists = append(patientLists, Intersect(cohort, patientList))
+		}
+	*/
+
+	for i, definition := range definitions {
+		eventGroups = append(eventGroups, &EventGroup{GroupID: q.QueryName + fmt.Sprintf("_GROUP_%d", i)})
+		panels := make([][]string, 0)
+		not := make([]bool, 0)
+		panels = append(panels, []string{q.StartConcept})
+		not = append(not, false)
+		for _, panel := range definition.Panels {
+			terms := make([]string, 0)
+
+			negation := *panel.Not
+
+			for _, term := range panel.Items {
+				terms = append(terms, *term.QueryTerm)
+			}
+
+			panels = append(panels, terms)
+			not = append(not, negation)
+		}
+
+		timer = time.Now()
+		initialCount, patientList, err := SubGroupExplore(q.QueryName, i, panels, not)
+		q.addTimers(fmt.Sprintf("medco-connector-i2b2-query-group%d", i), timer)
+		patientLists = append(patientLists, Intersect(cohort, patientList))
+		initialCounts = append(initialCounts, initialCount)
+		logrus.Debug("Initial Counts", initialCounts)
+		if err != nil {
+			return err
+		}
+		timer = time.Now()
+		initialCountEncrypt, err := unlynx.EncryptWithCothorityKey(initialCount)
+		q.addTimers(fmt.Sprintf("medco-connector-encrypt-init-count-group%d", i), timer)
+		if err != nil {
+			return err
+		}
+		logrus.Debug("initialcount ", initialCountEncrypt)
+		eventGroups[i].EncInitialCount = initialCountEncrypt
+	}
+
 	//get timepoints count for events of interest and censoring events
 
 	//TODO: pad for zero time
@@ -176,33 +221,56 @@ func (q *Query) Execute() error {
 		}
 		logrus.Debugf("got %d time points", len(sqlTimePoints))
 		//locally encrypt
+		timePointsSet := make(map[int](struct{}))
 		for _, sqlTimePoint := range sqlTimePoints {
-			localEventEncryption, err := unlynx.EncryptWithCothorityKey(int64(sqlTimePoint.localEventAggregate))
-			if err != nil {
-				return err
-			}
-			localCensoringEncryption, err := unlynx.EncryptWithCothorityKey(int64(sqlTimePoint.localCensoringAggrete))
-			if err != nil {
-				return err
-			}
+			if sqlTimePoint.timePoint <= q.TimeLimit {
+				timePointsSet[sqlTimePoint.timePoint] = struct{}{}
+				localEventEncryption, err := unlynx.EncryptWithCothorityKey(int64(sqlTimePoint.localEventAggregate))
+				if err != nil {
+					return err
+				}
+				localCensoringEncryption, err := unlynx.EncryptWithCothorityKey(int64(sqlTimePoint.localCensoringAggrete))
+				if err != nil {
+					return err
+				}
 
-			eventGroups[i].TimePointResults = append(eventGroups[i].TimePointResults, &TimePointResult{
-				TimePoint: sqlTimePoint.timePoint,
-				Result: Result{
-					EventValueAgg:     localEventEncryption,
-					CensoringValueAgg: localCensoringEncryption,
-				}})
+				eventGroups[i].TimePointResults = append(eventGroups[i].TimePointResults, &TimePointResult{
+					TimePoint: sqlTimePoint.timePoint,
+					Result: Result{
+						EventValueAgg:     localEventEncryption,
+						CensoringValueAgg: localCensoringEncryption,
+					}})
+			}
+		}
+
+		//TODO this put a full vector from 0 to time limit, with a lot of zero encrypted points
+		for j := 0; j < q.TimeLimit; j++ {
+			if _, isIn := timePointsSet[j]; !isIn {
+
+				zeroEncrypt, err := unlynx.EncryptWithCothorityKey(int64(0))
+				if err != nil {
+					return err
+				}
+				zeroEncrypt1, err := unlynx.EncryptWithCothorityKey(int64(0))
+				if err != nil {
+					return err
+				}
+				eventGroups[i].TimePointResults = append(eventGroups[i].TimePointResults, &TimePointResult{
+					TimePoint: j,
+					Result: Result{
+						EventValueAgg:     zeroEncrypt,
+						CensoringValueAgg: zeroEncrypt1,
+					}})
+			}
 		}
 
 	}
 	q.addTimers("medco-connector-timepoint-queries", timer)
 
+	//TODO this put a full vector from 0 to time limit, with a lot of zero encrypted points
+
 	//Key Switch !!
 
-	q.Result = &struct {
-		Timers    map[string]time.Duration
-		EncEvents EventGroups
-	}{}
 	for _, group := range eventGroups {
 		logrus.Trace("eventGroup", *group)
 	}
@@ -223,7 +291,7 @@ func (q *Query) addTimers(timerName string, since time.Time) {
 func (q *Query) PrintTimers() {
 	logrus.Debug("timer, duration:")
 	for timerName, duration := range q.Result.Timers {
-		logrus.Debug(timerName, " , ", duration.Milliseconds)
+		logrus.Debug(timerName, " , ", duration.Milliseconds())
 	}
 
 }
